@startuml

title __SERVLET's Class Diagram__\n

  package by.khomenko.training.finaltask05.servlet {
    class AuthenticationFilter {
        # doFilter()
    }
  }
  

  package by.khomenko.training.finaltask05.servlet {
    class DispatcherServlet {
        {static} - DB_DRIVER_CLASS : String
        {static} - DB_URL : String
        {static} - DB_USER : String
        {static} - DB_PASSWORD : String
        {static} - DB_POOL_START_SIZE : int
        {static} - DB_POOL_MAX_SIZE : int
        {static} - DB_POOL_CHECK_CONNECTION_TIMEOUT : int
        {static} - LOGGER : Logger
        {static} - ANSWER : String
        {static} - CATEGORY : String
        # doGet()
        # doPost()
        + init()
        - showCategory()
        - showMyImages()
        - showProfileInfo()
        - updateProfileSettings()
        - updateMyImages()
        - getCurrentUserId()
        - generateUniqueFileName()
    }
  }
  

  AuthenticationFilter -up-|> HttpFilter
  DispatcherServlet -up-|> HttpServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
